[package]
edition = "2021"
name = "axis-embedded-rpi"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "./src/embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.2.0", path = "./src/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.2.0", path = "./src/embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "./src/embassy/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "./src/embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", path = "./src/embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "./src/embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "./src/embassy/embassy-usb-logger" }
embassy-lora = { version = "0.1.0", path = "./src/embassy/embassy-lora", features = ["time", "defmt"] }
lora-phy = { version = "1" }
lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"] }
cyw43 = { path = "./src/embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "./src/embassy/cyw43-pio", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.11" }
embedded-hal-async = "0.2.0-alpha.2"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = {version = "0.5.0", features = ["custom-error-messages"] }
heapless = { version = "0.7.16", features = ["defmt-impl", "serde"] }

[profile.release]
debug = true

[patch.crates-io]
lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "ad289428fd44b02788e2fa2116445cc8f640a265" }

[build-dependencies]
