[package]
edition = "2021"
name = "axis-embedded-rpi"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca" }
embassy-lora = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["time", "defmt"] }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "6b5df4523aa1c4902f02e803450ae4b418e0e3ca", features = ["defmt", "overclock"] }

lora-phy = { version = "1" }
lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.11" }
embedded-hal-async = "0.2.0-alpha.2"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = {version = "0.5.0", features = ["custom-error-messages"] }
heapless = { version = "0.7.16", features = ["defmt-impl", "serde"] }
bit_field = "0.10.2"
bitfield = "0.14.0"

[profile.release]
debug = true

[patch.crates-io]
lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "ad289428fd44b02788e2fa2116445cc8f640a265" }

[build-dependencies]
