[package]
edition = "2021"
name = "axis-rp"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt"] }
embassy-sync = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.5.0", git = "https://github.com/Meigs2/embassy.git", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt"] }
embassy-futures = { git = "https://github.com/Meigs2/embassy.git" }
embassy-usb-logger = { git = "https://github.com/Meigs2/embassy.git" }
cyw43 = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/Meigs2/embassy.git", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = {version = "0.5.0", features = ["custom-error-messages"] }
heapless = { version = "0.7.16", features = ["defmt-impl", "serde"] }
bitfield = "0.15.0"
num-traits = { version = "0.2.16", default-features = false }
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
# panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# panic = "abort"
strip = true

[patch.crates-io]
lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "ad289428fd44b02788e2fa2116445cc8f640a265" }
